--- a/css/index.css
+++ b/css/index.css
@@ -79,11 +79,12 @@
 
     }
 
-    @media screen and (min-width: 376px) {
+    @media screen and (min-width: 401px) {
 
         /* TAGS */
 
             body {
+                margin: auto;
                 width: 1440px;
                 height: 800px;
             }
